[tool.poetry]
name = "ipkovich-dmlab"
version = "0.1.0"
description = "Próbafeladat a dmlab éltal meghírdetett szoftverfejlesztő pozíciójára."
authors = ["Adam Ipkovich <71510025+adamipkovich@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
fastapi = "^0.115.5"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
kaggle = "^1.6.17"
kagglehub = "^0.3.4"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
