[tool.poetry]
name = "ipkovich-dmlab"
version = "0.1.0"
description = "Próbafeladat a dmlab éltal meghírdetett szoftverfejlesztő pozíciójára."
authors = ["Adam Ipkovich <71510025+adamipkovich@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
fastapi = "^0.115.5"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
kaggle = "^1.6.17"
kagglehub = "^0.3.4"
sqlalchemy = "^2.0.36"
scikit-learn = "^1.5.2"
sns = "^0.1"
numpy = "2.0.2"
shap = "^0.46.0"
seaborn = "^0.13.2"
xgboost = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
